== Version 2.6.2 Work in progress (not released -- this is a draft) ==

  TODO: compile .po (documents)

  Users side :
  ------------
    # Apps :
        * Documents :
            - You could merge system folders & so, remove them.


== Version 2.6.1 ==

  Users side :
  ------------
    # The confirmation message for definitive deletion in hat-bar brick has been fixed.
    # Apps :
        * Billing :
            - A packaging issue with the optional exporter "WeasyPrint" has been fixed.
            - The layout of the TemplateBase detail-views has been fixed.
            - The inner-edition of TemplateBase instances bas been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # A crash when a function is used for default value of an enumerable FK has been fixed.
        # The confirmation message for the brick action 'delete' can now be customised.


== Version 2.6 ==

  UPGRADE NOTES :
    - You should create a all new virtual environment based on Python 3.8+ (as usual).
    - Some MariaDB users encountered errors when running migrations.
      The following workaround has worked for them:
      First, try to run the migrations again (as long as the error is a new one).
      It the same error is raised, get the raw SQL code with the command <creme sqlmigrate --settings=... app_label migration_name>
      (with the name of the migration which fails of course), then execute line after line the SQL commands in a MariaDB shell.
      You will get errors for things which have already be done, it's OK; then, you can run the command 'migrate' again.

  Users side :
  ------------
    # A notification system has been added. The notifications are sent to channels, and users can configure
      them in order to their notifications are displayed in the browser and/our received by emails.
        - A new job which sends notification emails has been created.